Traefik-external/plex/ingress.yml
apiVersion: v1
kind: Namespace
metadata:
  name: plex # change me
---
kind: Service
apiVersion: v1
metadata:
  name: plex # change me
  namespace: plex # change me
spec:
  type: ExternalName
  ports:
    - name: http # change me
      port: 32400 # change me
      targetPort: 32400 # change me
  externalName: 192.168.2.21 # change me
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: plex # change me
  namespace: plex # change me
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.plex.kbtech.org`) # change me
      kind: Rule
      services:
        - name: plex # change me
          port: 32400 # change me
    - match: Host(`plex.kbtech.org`) # change me
      kind: Rule
      services:
        - name: plex # change me
          port: 32400 # change me
      middlewares:
        - name: default-headers
  tls:
    secretName: kbtech-tls # change me
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: default-headers
  namespace: plex # change me
spec:
  headers:
    browserXssFilter: true
    contentTypeNosniff: true
    forceSTSHeader: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 15552000
    customFrameOptionsValue: SAMEORIGIN
    customRequestHeaders:
      X-Forwarded-Proto: https
